# moreisbetter

./: README.md
1secchoice/: index.html
alphabetor/: index.html
controlscontrol/: CMakeLists.txt  Doxyfile  graphics.xcf
controlscontrol/data/: CMakeLists.txt  controlscontrol.desktop  end.flac  shoot.flac  warning.flac
controlscontrol/data/icons/: CMakeLists.txt  icon.rc
controlscontrol/data/sprites/badguy/: melt.ini
controlscontrol/data/sprites/ego/: stand.ini
controlscontrol/lib/: CMakeLists.txt
controlscontrol/src/: CMakeLists.txt  main.c  utils.c  utils.h
controlscontrol/src/gamestates/: CMakeLists.txt  loading.c  menu.c  menu.h
donotpressthebutton/: index.html
magneticpong/: index.html
number/: index.html
pipelessbird/: index.html
pressspace/: index.html
tictacnoe/: index.html
whosecodeisitanyway/: index.html
