SET(DATADIR "${SHARE_INSTALL_PREFIX}/controlscontrol/data")

if(APPLE)
  SET(DATADIR "${BIN_INSTALL_DIR}/controlscontrol.app/Contents/Resources/data") #OMG NASTY
endif(APPLE)

add_subdirectory(icons)
if(UNIX AND NOT APPLE)
  install(FILES controlscontrol.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
endif(UNIX AND NOT APPLE)
install(DIRECTORY sprites DESTINATION ${DATADIR})
install(DIRECTORY fonts DESTINATION ${DATADIR})
install(FILES bg.png DESTINATION ${DATADIR})
install(FILES bg.ogg DESTINATION ${DATADIR})
install(FILES click.flac DESTINATION ${DATADIR})
install(FILES dosowisko.flac DESTINATION ${DATADIR})
install(FILES down.png DESTINATION ${DATADIR})
install(FILES up.png DESTINATION ${DATADIR})
install(FILES left.png DESTINATION ${DATADIR})
install(FILES right.png DESTINATION ${DATADIR})
install(FILES fire.png DESTINATION ${DATADIR})
install(FILES keys.png DESTINATION ${DATADIR})
install(FILES motherlode.ogg DESTINATION ${DATADIR})
install(FILES shoot.flac DESTINATION ${DATADIR})
install(FILES end.flac DESTINATION ${DATADIR})
install(FILES kbd.flac DESTINATION ${DATADIR})
install(FILES key.flac DESTINATION ${DATADIR})
install(FILES warning.flac DESTINATION ${DATADIR})
